--- a/index.html
+++ b/index.html
@@ -17,5 +17,23 @@
     <link rel="stylesheet" href="./style.css" />
     <title>BVS Pharmacy</title>
   </head>
-  <body></body>
+  <body>
+    <!-- <div id="splash">
+      <img class="logo" src="https://i.ibb.co/G5jyXN9/logo.png" alt="" />
+    </div> -->
+    <div class="content">
+      <header class="app-header">
+        <div class="container">
+          <img src="https://i.ibb.co/G5jyXN9/logo.png" alt="" class="logo" />
+          <input type="text" class="search" placeholder="Search..." />
+        </div>
+      </header>
+      <div class="subheader">
+        <div>
+          <p>Now delivering Rx & more</p>
+          <p>Find out now <i class="fa fa-chevron-right"></i></p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
