added deals and pharmacy

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
           <p>Now delivering Rx & more</p>
           <p>Find out now <i class="fa fa-chevron-right"></i></p>
         </div>
+        <img src="https://i.ibb.co/PxGygfW/delivery.png" alt="" />
+      </div>
+
+      <div class="grid container">
+        <div class="item">
+          <h4>Pharmacy</h4>
+          <p class="desc">2Rxs ready for refill</p>
+          <img src="https://i.ibb.co/BKgzCc5/medicine.png" alt="" />
+        </div>
+        <div class="item">
+          <h4>Deals & Rewards</h4>
+          <p class="desc">2 BreCare offers expiring</p>
+          <img src="https://i.ibb.co/XY6WTq6/medal.png" alt="" />
+        </div>
       </div>
     </div>
   </body>
