finished the grid container

--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
           <p class="desc">2 BreCare offers expiring</p>
           <img src="https://i.ibb.co/XY6WTq6/medal.png" alt="" />
         </div>
+        <div class="item">
+          <h4>SecondClinic</h4>
+          <p class="desc"></p>
+          <img src="https://i.ibb.co/F6YbmHw/nurse.png" alt="" />
+        </div>
+        <div class="item">
+          <h4>Shop</h4>
+          <p class="desc">Free shipping on orders $25+</p>
+          <img src="https://i.ibb.co/30kN9wL/shop.png" alt="" />
+        </div>
+        <div class="item">
+          <h4>Photo</h4>
+          <p class="desc"></p>
+          <img src="https://i.ibb.co/GszTNWF/photo.png" alt="" />
+        </div>
+        <div class="item">
+          <h4>Weekly Ad</h4>
+          <p class="desc">View your weekly ad</p>
+          <img src="https://i.ibb.co/nDryZ8R/newspaper.png" alt="" />
+        </div>
       </div>
     </div>
   </body>
