made the footer

--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
           <img src="https://i.ibb.co/nDryZ8R/newspaper.png" alt="" />
         </div>
       </div>
+      <footer class="app-footer">
+        <ul>
+          <li>
+            <i class="fa fa-heart">Home</i>
+          </li>
+          <li>
+            <i class="fa fa-barcode">Show Card</i>
+          </li>
+          <li>
+            <i class="fa fa-user">Account</i>
+          </li>
+          <li>
+            <i class="fa fa-map-maker">Find Store</i>
+          </li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
